# mathematica-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLIENT_CONFIG.json  CONTRIBUTING.md  Integration.nb  LICENSE  README.md  SECURITY.md  TEST_RESULTS_DETAILED.md  V14_VALIDATION.md  VERIFICATION_REPORT.md  blog_post_draft.md  install.sh  pyproject.toml  submissions_draft.md  test_mcp_connection.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  corpus.yml  publish.yml
addon/: MathematicaMCP.wl  README.md  install.wl
benchmarks/: README.md  benchmark_bottleneck_diagnosis.py  benchmark_notebook_ops.py  benchmark_perf_phases.py  llm_driver.py  measure_channel_split.py  probe_transport_floor.py  profile_surface.py  scenarios.json  score_trace_corpus.py  stress_test_prompt.md
docs/: MIGRATION.md  benchmarks.md  installation.md  quick-start.md  technical-reference.md
tests/: README.md  TEST_SUMMARY.md  conftest.py  demo_error_detection.py  mathematica_mcp_test_corpus.md  test_addon_fallback.py  test_addon_live.py  test_addon_source_regressions.py  test_async_blocking.py  test_cache_epoch.py  test_cli.py  test_config.py  test_connection.py  test_corpus_infra.py  test_corpus_normalize.py  test_corpus_runner.py  test_corpus_verifiers.py  test_cursor.py  test_derivation_verification.py  test_error_detection.py  test_execute_code_metadata.py  test_execution_style.py  test_guidance.py  test_guidance_lean.py  test_guidance_v2.py  test_image_validation.py  test_journal.py  test_kernel_lifecycle.py  test_lazy_tool_imports.py  test_lazy_tools_warm.py  test_lean_hardening.py  test_lean_status_errors.py  test_lean_tools.py  test_lean_tools_live.py  test_llm_driver_stub.py  test_notebook_backend.py  test_notebook_optimizations.py  test_notebook_tools_offline.py  test_optional_warm.py  test_prewarm.py  (+21 more)
(+48 files in other folders)
